<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kruno</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="datum_rodenja">Datum rodenja</string>
    <string name="unesi_datum">Unesite datum rodenja</string>
    <string name="dalje">Dalje</string>
    <string name="unesi_predmet">Unesite predmet</string>
    <string name="unesi_ak_godinu">Unesite akademsku godinu</string>
    <string name="unesi_broj_sati_predavanja">Unesite broj sati predavanja</string>
    <string name="unesi_broj_sati_vjezbe">Unesite broj sati vjezbi</string>
    <string name="profesor">Profesor</string>
    <string name="predmet">Predmet</string>
    <string name="akademska_godina">Akademska godina</string>
    <string name="broj_sati_predavanja">Broj sati predavanja</string>
    <string name="broj_sati_vjezbe">Broj sati vjezbi</string>
    <string name="povratak">Povratak</string>
    <string name="studenti">Studenti</string>
    <string name="dodaj_studenta">Dodaj studenta</string>
    <string name="unesi_profesora">Unesite ime i prezime profesora</string>

    <string-array name="languages">
        <item>Odaberite jezik</item>
        <item>Hrvatski</item>
        <item>Engleski</item>
        <item>Mađarski</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
