<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/avatar"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilIme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tilPrezime"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietIme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ime" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrezime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tilIme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPrezime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prezime" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/vLine"
        android:background="#AA9898"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilIme"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvLabelDatum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDatum"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etDatum"
        app:layout_constraintTop_toBottomOf="@+id/vLine"
        android:text="@string/datum_rodenja"/>

    <EditText
        android:id="@+id/etDatum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_weight="2.5"
        app:layout_constraintTop_toBottomOf="@id/vLine"
        app:layout_constraintStart_toEndOf="@+id/tvLabelDatum"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/datum_rodenja"/>

    <View
        android:id="@+id/vLine2"
        android:background="#AA9898"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDatum"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnDalje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dalje"/>


</androidx.constraintlayout.widget.ConstraintLayout>